--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-hello, world!
+<!DOCTYPE html>
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Sai Ganesha's Website">
+    <title> gunsai75's Website </title>
+    <link rel="stylesheet" href="styles.css">
+
+
+</head>
+
+<body>
+    <nav> Home </nav>
+    <head> Welcome </head>
+    <body> 
+        <p>
+            Hey there! I am Sai Ganesha. <br> 
+            I am currently pursuing a bachelor's degree in computer science at Woxsen University. <br>
+            My hobbies are reading, photography, and playing video games.<br>
+            I have a knack for tech and programming (that's why this website exists).
+        </p>
+        <h4>
+            --- WIP ---
+        </h4>
+    </body>
+</body>
