CSS and HTML changes

--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 </head>
 
 <body>
-    <nav> Home </nav>
-    <head> Welcome </head>
-    <body> 
+    <nav> <a href="#home"> Home </a> <a href="#about"> About </a></nav>
+    <h1> Welcome </h1>
+    <hr>
+        <h2>
+            About
+        </h2>
         <p>
-            Hey there! I am Sai Ganesha. <br> 
-            I am currently pursuing a bachelor's degree in computer science at Woxsen University. <br>
-            My hobbies are reading, photography, and playing video games.<br>
+            Hey there! I am <em>Sai Ganesha</em>. <br> 
+            I am currently pursuing a bachelor's degree in <em>Computer Science</em> at <em>Woxsen University</em>. <br>
+            My hobbies are <em>reading, photography, and playing video games</em>.<br>
             I have a knack for tech and programming (that's why this website exists).
         </p>
         <h4>
             --- WIP ---
         </h4>
-    </body>
 </body>
