Added some links

--- a/index.html
+++ b/index.html
@@ -12,17 +12,34 @@
 </head>
 
 <body>
-    <nav> <a href="#home"> Home </a> <a href="#about"> About </a></nav>
+    <nav class="navigator"> 
+        <a href="/index.html"> Home </a> 
+        <a href="#About"> About </a>
+        <a href="#Links"> Links </a>
+    </nav>
     <h1> Welcome </h1>
     <hr>
-        <h2>
+        <h2 id="About">
             About
         </h2>
         <p>
             Hey there! I am <em>Sai Ganesha</em>. <br> 
             I am currently pursuing a bachelor's degree in <em>Computer Science</em> at <em>Woxsen University</em>. <br>
             My hobbies are <em>reading, photography, and playing video games</em>.<br>
-            I have a knack for tech and programming (that's why this website exists).
+            I have a knack for tech and programming. Infact, that's why this website exists; 
+            to serve as a platform to share with the world the projects that I work on, in a more digestible manner. 
+        </p>
+        <h2 id="Links">
+            Links:
+        </h2>
+        <p> Links to me on the vast wide internet - </p>
+        <p>
+            <ul>
+                <li> Linkedin - <a href="https://www.linkedin.com/in/sai-ganesha-munagari-704175306/">My Linkedin profile</a></li>
+                <li> Github - <a href="https://github.com/gunsai75">gunsai75</a> </li>
+                <li> <a href="https://open.kattis.com/users/sai-ganesha-m"> Kattis Problem Archive </a> </li>
+                <li> CodeForces - <a href="https://codeforces.com/profile/lyon_comet">lyon_comet</a> </li>
+            </ul>
         </p>
         <h4>
             --- WIP ---
