Changes to font face

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Sai Ganesha's Website">
     <title> gunsai75's Website </title>
-    <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 
@@ -17,7 +16,7 @@
         <a href="#About"> About </a>
         <a href="#Links"> Links </a>
     </nav>
-    <h1> Welcome </h1>
+    <h1> Welcome! </h1>
     <hr>
         <h2 id="About">
             About
