--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2 id="Links">
             Links:
         </h2>
-        <p> Links to me on the vast wide internet - </p>
+        <p> Links to reach out to me on the vast wide internet - </p>
         <p>
             <ul>
                 <li> Linkedin - <a href="https://www.linkedin.com/in/sai-ganesha-munagari-704175306/">My Linkedin profile</a></li>
@@ -42,5 +42,6 @@
         </p>
         <h4>
             --- WIP ---
+            this website is not mobile friendly yet.
         </h4>
 </body>
