--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 </head>
 
 <body>
-    <nav class="navigator"> 
-        <a href="/index.html"> Home </a> 
-        <a href="#About"> About </a>
-        <a href="#Links"> Links </a>
-    </nav>
+    <div class="navbar">
+        <nav class="navigator"> 
+            <a href="/index.html"> Home </a> 
+            <a href="#About"> About </a>
+            <a href="#Links"> Links </a>
+        </nav>
+    </div>
+    
     <h1> Welcome! </h1>
     <hr>
         <h2 id="About">
